# libloginctl

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  ctest.yml
include/: loginctl.h
source/: loginctl.c
test/: test_loginctl.c
